horizontal scroll issues resolved

--- a/src/components/payment-management/payment-list/gift/gift.scss
+++ b/src/components/payment-management/payment-list/gift/gift.scss
@@ -1,4 +1,6 @@
 .gift-main {
+  overflow-x: auto;
+  max-width: 100%;
   .name {
     text-decoration:underline;
     cursor: pointer;
