--- a/src/components/payment-management/payment-list/payout/payout.scss
+++ b/src/components/payment-management/payment-list/payout/payout.scss
@@ -1,4 +1,6 @@
 .payout-main {
+  overflow-x: auto;
+  max-width: 100%;
   .name {
     text-decoration:underline;
     cursor: pointer;
