--- a/src/components/payment-management/salary-payout/salaryPayout.scss
+++ b/src/components/payment-management/salary-payout/salaryPayout.scss
@@ -1,4 +1,6 @@
 .salary-payout-main {
+  overflow-x: auto;
+  max-width: 100%;
   padding: 40px 30px;
    .name {
     text-decoration:underline;
